hello little girl

--- a/client-src/public/index.html
+++ b/client-src/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <title>ttv/joe_js</title>
   </head>
   <body>
