--- a/src/gummyDuck/index.html
+++ b/src/gummyDuck/index.html
@@ -10,31 +10,117 @@
         src: url("/Young\ Style.ttf") format("truetype");
     }
 
-    body {
+    @font-face {
+        font-family: "Sinkin";
+        src: url("/SinkinSans-400Regular.otf");
+        font-weight: normal;
+    }
+
+    @font-face {
+        font-family: "Sinkin";
+        src: url("/SinkinSans-600SemiBold.otf");
+        font-weight: bold;
+    }
+
+    body,
+    #page-container {
+        height: 300vh;
         margin: 0;
+        padding: 0;
     }
 
     #lol-logo {
-        position: fixed;
         font-family: "YoungStyle";
         color: black;
-        font-size: 135px;
+        font-size: 150px;
         font-weight: bold;
         -webkit-font-smoothing: antialiased;
-        top: 125px;
-        left: 250px;
         text-align: center;
-        line-height: 160px;
+        line-height: 170px;
         opacity: 0;
+        transition: opacity 3s, color 2s;
+    }
+
+    main {
+        width: 100%;
+        height: 100vh;
+        background: rgba(0, 0, 0, 0.0);
+        transition: background 1s;
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    #opening-container {
+        width: 80vw;
+        height: 80vh;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    #opening-details {
+        margin-top: 3rem;
+        opacity: 0;
+        transition: opacity 2s ease-out;
+    }
+
+    #opening-container p {
+        color: rgb(255, 255, 220);
+        font-size: 32px;
+        font-family: "Sinkin";
+    }
+
+    #opening-container p strong {
+        font-weight: bold;
+        color: rgb(255, 225, 100);
+    }
+
+    #opening-container p a {
+        font-weight: bold;
+        color: rgb(255, 255, 0);
+    }
+
+    #opening-container p a:visited {
+        color: inherit;
+    }
+
+    #opening-container p a:visited {
+        color: rgb(255, 255, 0);
+    }
+
+    #page-container>canvas {
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: -2
     }
 </style>
 
 <body>
     <div id="page-container">
-        <div id="lol-logo">
-            Gummy
-            <br />Duck
-        </div>
+        <main>
+            <div id="opening-container">
+                <div id="lol-logo">
+                    Gummy
+                    <br />Duck
+                </div>
+                <div id="opening-details">
+                    <p>
+                        <strong>Gummy Duck</strong> is a development agency creating unique experiences for the web.
+                        <br /><br />
+                        We offer <strong>full-stack web development services</strong> and <strong>consulting</strong>.
+                        We are building <strong>3D</strong> products for the browser, including games and business
+                        websites.
+                        <br /><br />
+                        We aim to push the limits of what's possible on the web and exceed expectations.
+                        <br />
+                        <a href="#">Work with us.</a>
+                    </p>
+                </div>
+            </div>
+        </main>
     </div>
     <script defer src="/node_modules/three/build/three.js"></script>
     <script defer src="/node_modules/three/examples/js/loaders/GLTFLoader.js"></script>
@@ -42,18 +128,30 @@
     <script defer src="/script.js"></script>
     <script>
         document.addEventListener("DOMContentLoaded", () => {
-            const logo = document.querySelector("#lol-logo");
+            const sel = document.querySelector.bind(document);
+            const main = sel("main");
+            const mainHeight = main.clientHeight;
+            const logo = sel("#lol-logo");
+            const details = sel("#opening-details");
+
+
+            window.addEventListener("scroll", () => {
+                const scrolledFromTop = window.scrollY;
+                if (window.GROW_PANE) {
+                    window.GROW_PANE(Math.min(1, window.scrollY / mainHeight));
+                }
+            });
 
             setTimeout(() => {
-                let opacity = 0;
-                const maxOpacity = 0.9;
-                setInterval(() => {
-                    opacity += 0.01;
+                logo.style.opacity = 0.8;
+            }, 1000);
 
-                    if (opacity >= maxOpacity) return;
-                    logo.style.opacity = opacity.toString();
-                }, 20);
-            }, 6000);
+            setTimeout(() => {
+                logo.style.color = "rgb(255, 255, 130)";
+                main.style.background = "rgba(0, 0, 0, 0.95)";
+                details.style.opacity = 1;
+            }, 5000);
+
         });
     </script>
 </body>
